--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
+    "ra-data-simple-rest": "^5.6.3",
     "react": "^19.0.0",
+    "react-admin": "^5.6.3",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
