--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ra-data-simple-rest": "^5.6.3",
     "react": "^19.0.0",
     "react-admin": "^5.6.3",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
