--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
-    "next": "15.2.1",
+    "next": "^15.3.0-canary.14",
     "ra-data-simple-rest": "^5.6.3",
     "react": "^19.0.0",
     "react-admin": "^5.6.3",
